tests/baselines/reference/classInheritence.errors.txt
==== tests/cases/compiler/classInheritence.ts (1 errors) ====
    class B extends A { }
    class A extends A { }
          ~
!!! classInheritence.ts(2,7): error TS2100: Class 'A' is recursively referenced as a base type of itself.